--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,5 @@ user.add-more-users= Add More Users
 error.user.id= Id must be between 3 to 10 characters.
 error.user.name= User name must be between 5 to 20 characters.
 error.user.gender= Select  gender.
+login.singin=Please Sign In
+login.singout=You have been logged out.
