--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,7 +1,7 @@
-app.title= Умный дом
+app.title=Умный дом - Демо
 app.create-user= Create User
 app.user-details= User Details
-app.about = Демо приложение Умный дом
+app.about=Приложение Умный дом. Демо версия.
 
 user.id= Id
 user.name= Name
